homepage style css

--- a/resources/views/homepage.html.twig
+++ b/resources/views/homepage.html.twig
@@ -114,7 +114,7 @@
 
         <!-- author description -->
         <div class="author-description" style="margin-top: 40px;">
-            <div class="author-text" style="border-bottom: none;width: 600px;padding: 25px 15px 80px 15px;">
+            <div class="author-text" style="border-bottom: none;width: 600px;padding: 25px 15px 80px 15px; color: #313131;">
                 <p>Welcome to the Ancient land of the Great Mongolian Empire.</p>
                 <p>Travel All Mongolia invites you to join us this coming summer for an experience of lifetime in the awesome landscapes of Mongolian, from mountains, to lakes, to hot dry desert, to rolling hills of open grassland. A land of undiscovered nature and a unique culture of unforgettable experiences of nomadic herdsman heritage that spans thousands of years since antiquity.</p>
                 <p>We offer you a variety of trips throughout Mongolia including but not limited to, horse rides across the landscape, camel rides, visits to the Gobi desert for tours, research, and study, trekking adventures across Mongolia,Trans-Siberian tours, train ticket booking, horse and camel tours, kayak tours, andjeep tours by road. All you need to do is book your flight to Ulaanbaatar, the capital of Mongolia and inform us of your arrival and departure dates, along with what you are interested in doing in Mongolia on your tour here. We will custom plan your stay for you.</p>
