--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -38,9 +38,7 @@
                         <br/>
                         <b style="color: #B28E1B">Region:</b> <span>{{ tour.region }}</span>
                         <br/>
-                        <b style="color: #B28E1B">Price:</b> <span><a href="http://www.travelallmongolia.com/contact/form">
-                            <span style="font-weight: bold; color: brown">Contact us</span>
-                        </a></span>
+                        <b style="color: #B28E1B">Price:</b> <span>$2689</span>
                         <br/>{#
                         <span style="font-weight: bold; color: brown"><a
                                     href="http://www.travelallmongolia.com/contact/form">
