--- a/resources/views/Page/request_catalog.html.twig
+++ b/resources/views/Page/request_catalog.html.twig
@@ -102,7 +102,7 @@
                     </div>
 
                     <div class="form_col_2" style="margin-right: 30px;">
-                        <div class="row alignleft field_text">
+                        <div class="row alignleft field_text" style="width: 95%;">
                             {{ form_label(form.comment) }}
                             {{ form_widget(form.comment, { 'attr': {'class': 'inputField required', 'rows': '10'} }) }}
                             {{ form_errors(form.comment) }}
