--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -1632,10 +1632,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
                 </td>
                 <td>
-                    <p>7<sup>th</sup> of September, 2018</p>
+                    <p>7<sup>th</sup> of September, 2017-2018</p>
                 </td>
                 <td>
-                    <p>20<sup>th</sup> of October, 2018</p>
+                    <p>20<sup>th</sup> of October, 2017-2018</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -1647,7 +1647,7 @@
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
                 </td>
                 <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'golden-eagle-festival-and-gobi-desert-2018' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
@@ -1661,10 +1661,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
                 </td>
                 <td>
-                    <p>21<sup>th</sup> of September, 2018</p>
+                    <p>21<sup>th</sup> of September, 2017-2018</p>
                 </td>
                 <td>
-                    <p>4<sup>th</sup> of October, 2018</p>
+                    <p>4<sup>th</sup> of October, 2017-2018</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -1676,7 +1676,7 @@
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
                 </td>
                 <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'golden-eagle-festival-and-gobi-desert-2018' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
@@ -1748,10 +1748,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'golden-eagle-festival' }) }}">{{ app.content_tours.tourName('golden-eagle-festival') }}</a></p>
                 </td>
                 <td>
-                    <p>14<sup>th</sup> of September, 2018</p>
+                    <p>14<sup>th</sup> of September, 2017-2018</p>
                 </td>
                 <td>
-                    <p>21<sup>th</sup> of September, 2018</p>
+                    <p>21<sup>th</sup> of September, 2017-2018</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -1763,7 +1763,7 @@
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
                 </td>
                 <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'golden-eagle-festival-2018' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'golden-eagle-festival-2017-2018' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
@@ -1813,10 +1813,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'golden-eagle-festival' }) }}">{{ app.content_tours.tourName('golden-eagle-festival') }}</a></p>
                 </td>
                 <td>
-                    <p>28<sup>th</sup> of September, 2018</p>
+                    <p>28<sup>th</sup> of September, 2017-2018</p>
                 </td>
                 <td>
-                    <p>5<sup>th</sup> of October, 2018</p>
+                    <p>5<sup>th</sup> of October, 2017-2018</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -1828,7 +1828,7 @@
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
                 </td>
                 <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'golden-eagle-festival-2018' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'golden-eagle-festival-2017-2018' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
