--- a/resources/views/Tour/taste-of-mongolia.html.twig
+++ b/resources/views/Tour/taste-of-mongolia.html.twig
@@ -38,7 +38,7 @@
                         <br/>
                         <b style="color: #B28E1B">Region:</b> <span>{{ tour.region }}</span>
                         <br/>
-                        <b style="color: #B28E1B">Price:</b> <span>$1999 - $2895</span>
+                        <b style="color: #B28E1B">Price:</b> <span>$2489</span>
                         <br/>{#
                         <span style="font-weight: bold; color: brown"><a
                                     href="http://www.travelallmongolia.com/contact/form">
@@ -46,10 +46,10 @@
                         <br/>#}
                         {#<span style="font-weight: bold; color: brown">$300 OFF</span>
                         <br/>#}
-                        <a href="http://www.travelallmongolia.com/contact/form">
+                        {#<a href="http://www.travelallmongolia.com/contact/form">
                             <span style="font-weight: bold; color: brown">We have special discount for this trip, please contact us</span>
                         </a>
-                        <br/>
+                        <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>$490</span>
                         <br/>
                         If you are traveling alone and wish to share a room with another participant, we will try to find a roommate for you
