ene aylaliin new dates for 2018, http://www.travelallmongolia.com/tour/eagle-festival-and-gobi-desert.html#.WeTXsVuCzIU Sep 6-19, Sep 13-26 & Sep 27 - Oct 10, 2018

--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -1632,10 +1632,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
                 </td>
                 <td>
-                    <p>7<sup>th</sup> of September, 2018-2019</p>
+                    <p>6<sup>th</sup> of September, 2018-2019</p>
                 </td>
                 <td>
-                    <p>20<sup>th</sup> of October, 2018-2019</p>
+                    <p>19<sup>th</sup> of October, 2018-2019</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -1661,10 +1661,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
                 </td>
                 <td>
-                    <p>21<sup>th</sup> of September, 2018-2019</p>
+                    <p>13<sup>th</sup> of September, 2018-2019</p>
                 </td>
                 <td>
-                    <p>4<sup>th</sup> of October, 2018-2019</p>
+                    <p>26<sup>th</sup> of September, 2018-2019</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -1764,6 +1764,35 @@
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'golden-eagle-festival-2018-2019' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>8</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
+                </td>
+                <td>
+                    <p>27<sup>th</sup> of September, 2018-2019</p>
+                </td>
+                <td>
+                    <p>10<sup>th</sup> of October, 2018-2019</p>
+                </td>
+                <td>
+                    <p>16 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
