2017-2018 gsn baigaag 2018 bolgoy

--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -1632,10 +1632,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
                 </td>
                 <td>
-                    <p>6<sup>th</sup> of September, 2018-2019</p>
+                    <p>6<sup>th</sup> of September, 2018</p>
                 </td>
                 <td>
-                    <p>19<sup>th</sup> of October, 2018-2019</p>
+                    <p>19<sup>th</sup> of October, 2018</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -1661,10 +1661,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
                 </td>
                 <td>
-                    <p>13<sup>th</sup> of September, 2018-2019</p>
+                    <p>13<sup>th</sup> of September, 2018</p>
                 </td>
                 <td>
-                    <p>26<sup>th</sup> of September, 2018-2019</p>
+                    <p>26<sup>th</sup> of September, 2018</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -1777,10 +1777,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
                 </td>
                 <td>
-                    <p>27<sup>th</sup> of September, 2018-2019</p>
+                    <p>27<sup>th</sup> of September, 2018</p>
                 </td>
                 <td>
-                    <p>10<sup>th</sup> of October, 2018-2019</p>
+                    <p>10<sup>th</sup> of October, 2018</p>
                 </td>
                 <td>
                     <p>16 persons</p>
