2017-2018 gsn baigaag 2018 bolgoy

--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -980,10 +980,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake' }) }}">{{ app.content_tours.tourName('jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake') }}</a></p>
                 </td>
                 <td>
-                    <p>3<sup>rd</sup> of July, 2018-2019</p>
+                    <p>3<sup>rd</sup> of July, 2018</p>
                 </td>
                 <td>
-                    <p>14<sup>th</sup> of July, 2018-2019</p>
+                    <p>14<sup>th</sup> of July, 2018</p>
                 </td>
                 <td>
                     <p>2 - 16 persons</p>
@@ -1009,10 +1009,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake' }) }}">{{ app.content_tours.tourName('jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake') }}</a></p>
                 </td>
                 <td>
-                    <p>8<sup>th</sup> of July, 2018-2019</p>
+                    <p>8<sup>th</sup> of July, 2018</p>
                 </td>
                 <td>
-                    <p>19<sup>th</sup> of July, 2018-2019</p>
+                    <p>19<sup>th</sup> of July, 2018</p>
                 </td>
                 <td>
                     <p>2 - 16 persons</p>
@@ -1748,10 +1748,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'golden-eagle-festival' }) }}">{{ app.content_tours.tourName('golden-eagle-festival') }}</a></p>
                 </td>
                 <td>
-                    <p>14<sup>th</sup> of September, 2018-2019</p>
+                    <p>14<sup>th</sup> of September, 2018</p>
                 </td>
                 <td>
-                    <p>21<sup>th</sup> of September, 2018-2019</p>
+                    <p>21<sup>th</sup> of September, 2018</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -1763,7 +1763,7 @@
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
                 </td>
                 <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'golden-eagle-festival-2018-2019' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'golden-eagle-festival-2018' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
@@ -1842,10 +1842,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'golden-eagle-festival' }) }}">{{ app.content_tours.tourName('golden-eagle-festival') }}</a></p>
                 </td>
                 <td>
-                    <p>28<sup>th</sup> of September, 2018-2019</p>
+                    <p>28<sup>th</sup> of September, 2018</p>
                 </td>
                 <td>
-                    <p>5<sup>th</sup> of October, 2018-2019</p>
+                    <p>5<sup>th</sup> of October, 2018</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -1857,7 +1857,7 @@
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
                 </td>
                 <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'golden-eagle-festival-2018-2019' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'golden-eagle-festival-2018' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
