--- a/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
@@ -59,8 +59,8 @@
                     </div>
                     <!--/ widget_categories -->
 
-                    <div class="widget-container widget_categories">
-                        <p style="font-style: italic; color: green;">
+                    <div class="widget-container widget_categories" style="background: #f25c24;">
+                        <p style="font-style: italic; color: white; font-soze: 18px;">
                             Book this trip and stay in a Deluxe get at Gobi Nomad Lodge for three nights at no additional
                             cost. The Deluxe gers have en-suite bathrooms with shower and air-conditioning.</p>
                     </div>
