--- a/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
@@ -65,6 +65,8 @@
                             cost. The Deluxe gers have en-suite bathrooms with shower and air-conditioning.</p>
                     </div>
 
+                    {% include 'Page/_trip_advisor.html.twig' %}
+
                     <!-- widget_categories -->
                     <div class="widget-container widget_categories">
                         <h3 class="widget-title" style="margin-bottom:0;">Travel map</h3>
