--- a/resources/views/Page/_trip_advisor.html.twig
+++ b/resources/views/Page/_trip_advisor.html.twig
@@ -1,5 +1,5 @@
 <div class="widget-container widget_categories">
     <h3 class="widget-title" style="margin-bottom:0;">Check our lodge's review at TripAdvisor.</h3>
 </div>
-<a href="https://www.tripadvisor.com/Hotel_Review-g940744-d12693608-Reviews-Gobi_Nomad_Lodge-Dalandzadgad_Omnogovi_Province.html" style="outline: none;">
+<a href="https://www.tripadvisor.com/Hotel_Review-g940744-d12693608-Reviews-Gobi_Nomad_Lodge-Dalandzadgad_Omnogovi_Province.html" style="outline: none;" target="_blank">
     <img src="/images/trip_advisor.jpg" width="380" class="frame_box"/></a>
