--- a/resources/views/Tour/a_classic_journey_of_mongolia.html.twig
+++ b/resources/views/Tour/a_classic_journey_of_mongolia.html.twig
@@ -42,6 +42,8 @@
                     </div>
                     <!--/ widget_categories -->
 
+                    {% include 'Page/_trip_advisor.html.twig' %}
+
                     <!-- widget_categories -->
                     <div class="widget-container widget_categories">
                         <h3 class="widget-title" style="margin-bottom:0;">Travel map</h3>
