--- a/resources/views/Tour/overland-discovery.html.twig
+++ b/resources/views/Tour/overland-discovery.html.twig
@@ -65,6 +65,8 @@
                     <a href="{{ tour.mapLarge }}" data-rel="prettyPhoto" title="Travel map" hidefocus="true" rel="prettyPhoto" style="outline: none;"><img src="{{ tour.map }}" width="380" class="frame_box"/></a>
                     <!--/ widget_categories -->
 
+                    {% include 'Page/_trip_advisor.html.twig' %}
+
                     {{ include('Tour/_highlights.html.twig') }}
 
                     {{ include('Tour/_discount.html.twig') }}
