--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -1,3 +1,12 @@
+<div class="">
+    <p>If the dates indicated in the trip calendar do not match your schedule we can offer you a customized private tour
+        with reasonable prices to meet your needs and expectations. Please, do not hesitate to contact with us and we
+        will be happy to provide you with all necessary information including the trip price discounts, advantages of
+        having us as those who can help you to open Mongolia’s uniqueness, our company background and features differ us
+        from others.</p>
+    <br>
+</div>
+
 <h2>May</h2>
 <div class="styled_table">
         <table>
@@ -670,7 +679,7 @@
                     <p>16 persons</p>
                 </td>
                 <td>
-                    <p>7 spaces left</p>
+                    <p>6 spaces left</p>
                 </td>
                 <td>
                     <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
