--- a/resources/views/Tour/gobi_and_beyond.html.twig
+++ b/resources/views/Tour/gobi_and_beyond.html.twig
@@ -41,6 +41,14 @@
                     </div>
                     <!--/ widget_categories -->
 
+                    <div class="widget-container widget_categories" style="background: #f25c24;">
+                        <p style="font-style: italic; color: white; font-size: 18px;">
+                            Book this trip and stay in a Deluxe get at Gobi Nomad Lodge for three nights at no additional
+                            cost. The Deluxe gers have en-suite bathrooms with shower and air-conditioning.</p>
+                    </div>
+
+                    {% include 'Page/_trip_advisor.html.twig' %}
+
                     <!-- widget_categories -->
                     <div class="widget-container widget_categories">
                         <h3 class="widget-title" style="margin-bottom:0;">Travel map</h3>
