--- a/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
@@ -65,6 +65,12 @@
                             cost. The Deluxe gers have en-suite bathrooms with shower and air-conditioning.</p>
                     </div>
 
+                    <div class="widget-container widget_categories" style="background: #f25c24;">
+                        <p style="font-style: italic; color: white; font-size: 18px;">
+                            Book this trip and stay in a Deluxe get at Gobi Nomad Lodge for three nights at no additional
+                            cost. The Deluxe gers have en-suite bathrooms with shower and air-conditioning.</p>
+                    </div>
+
                     {% include 'Page/_trip_advisor.html.twig' %}
 
                     <!-- widget_categories -->
