--- a/resources/views/Tour/overland-discovery.html.twig
+++ b/resources/views/Tour/overland-discovery.html.twig
@@ -58,14 +58,20 @@
                     </div>
                     <!--/ widget_categories -->
 
+                    <div class="widget-container widget_categories" style="background: #f25c24;">
+                        <p style="font-style: italic; color: white; font-size: 18px;">
+                            Book this trip and stay in a Deluxe get at Gobi Nomad Lodge for three nights at no additional
+                            cost. The Deluxe gers have en-suite bathrooms with shower and air-conditioning.</p>
+                    </div>
+
+                    {% include 'Page/_trip_advisor.html.twig' %}
+
                     <!-- widget_categories -->
                     <div class="widget-container widget_categories">
                         <h3 class="widget-title" style="margin-bottom:0;">Travel map</h3>
                     </div>
                     <a href="{{ tour.mapLarge }}" data-rel="prettyPhoto" title="Travel map" hidefocus="true" rel="prettyPhoto" style="outline: none;"><img src="{{ tour.map }}" width="380" class="frame_box"/></a>
                     <!--/ widget_categories -->
-
-                    {% include 'Page/_trip_advisor.html.twig' %}
 
                     {{ include('Tour/_highlights.html.twig') }}
 
