--- a/resources/views/Page/tours.html.twig
+++ b/resources/views/Page/tours.html.twig
@@ -71,6 +71,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
     <style type="text/css">
         .special_text .special_price a, .special_text h3 a, .special_text .info_row {color: black;}
     </style>
