Stay overnight in Art 88

--- a/resources/views/Tour/luxury-tour-with-naadam-festival.html.twig
+++ b/resources/views/Tour/luxury-tour-with-naadam-festival.html.twig
@@ -324,7 +324,7 @@
                                 <div class="box_title">July 8 - Day 7 Take a flight to Khuvsgul Lake</div>
                                 <div class="box_content">
                                     <p>Following breakfast, you are transferred to the airport for your 1.2 hour flight to Muron in the north. Muron is the headquarters of the Khuvsgul Province. You will meet your local guide at the airport and then transfer by a 4WD vehicle through the vast Mongolian prairieland into the forested mountains until finally arriving at Lake Khuvsgul (4 hour drive). It is Mongolia's largest fresh water lake, also known as the "Dark Blue Pearl" of Mongolia is situated amidst pristine nature, beautiful forests, mountains, meadows, abundant with bird species, and orchids.</p>
-                                    <p><strong><em> Overnight at Alagtsar Tourist camp, Deluxe villa<br /> Meals: Breakfast, Lunch & dinner</em></strong></p>
+                                    <p><strong><em> Stay overnight in Art 88<br /> Meals: Breakfast, Lunch & dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
@@ -335,7 +335,7 @@
                                     <p>After breakfast at the camp you will have a full day to explore the breathtaking shores of this beautiful lake.  There is ample opportunity to discover the local nomadic lifestyle. You can plan hiking and photo ventures along the shorelines, which are excellent habitats for wildlife and birds.
                                         <br/> Walking and hiking in the lake shores, Horse riding trek near the lake, visiting yak breeding family and experience their unique lifestyle.
                                     </p>
-                                    <p><strong><em>Overnight at Alagtsar Tourist camp, Deluxe villa <br />Meals: Breakfast, Lunch & dinner</em></strong></p>
+                                    <p><strong><em>Stay overnight in Art 88 <br />Meals: Breakfast, Lunch & dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
