--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -287,6 +287,10 @@ src="//www.googleadservices.com/pagead/conversion.js">
 src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/973048679/?value=0&amp;guid=ON&amp;script=0"/>
 </div>
 </noscript>
+
+
+{% block js %}{% endblock %}
+
 </body>
 
 </html>
