--- a/resources/views/homepage.html.twig
+++ b/resources/views/homepage.html.twig
@@ -236,3 +236,11 @@
     {{ parent() }}
     {{ include('Tour/_tour_style.html.twig') }}
 {% endblock %}
+
+{% block js %}
+    <script>
+        (function (w,i,d,g,e,t,s) {w[d] = w[d]||[];t= i.createElement(g);
+            t.async=1;t.src=e;s=i.getElementsByTagName(g)[0];s.parentNode.insertBefore(t, s);
+        })(window, document, '_gscq','script','//widgets.getsitecontrol.com/123376/script.js');
+    </script>
+{% endblock %}
