--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -289,7 +289,17 @@ src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/973048679/?value
 </noscript>
 
 
-{% block js %}{% endblock %}
+{% block js %}
+    <script>
+        $(function(){
+            setTimeout(function () {
+                (function (w,i,d,g,e,t,s) {w[d] = w[d]||[];t= i.createElement(g);
+                    t.async=1;t.src=e;s=i.getElementsByTagName(g)[0];s.parentNode.insertBefore(t, s);
+                })(window, document, '_gscq','script','//widgets.getsitecontrol.com/123376/script.js');
+            }, 10000);
+        });
+    </script>
+{% endblock %}
 
 </body>
 
