--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -1638,6 +1638,35 @@
                     <p>3</p>
                 </td>
                 <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}">{{ app.content_tours.tourName('western-southern-and-northern-mongolia-expedition') }}</a></p>
+                </td>
+                <td>
+                    <p>1<sup>st</sup> of September, 2018</p>
+                </td>
+                <td>
+                    <p>15<sup>th</sup> of September, 2018</p>
+                </td>
+                <td>
+                    <p>2 - 16 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>4</p>
+                </td>
+                <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
                 </td>
                 <td>
@@ -1664,7 +1693,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>4</p>
+                    <p>5</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
@@ -1693,7 +1722,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>5</p>
+                    <p>6</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia' }) }}">{{ app.content_tours.tourName('jewels-of-mongolia') }}</a></p>
@@ -1722,7 +1751,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>6</p>
+                    <p>7</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'overland-discovery' }) }}">{{ app.content_tours.tourName('overland-discovery') }}</a></p>
@@ -1751,7 +1780,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>7</p>
+                    <p>8</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'golden-eagle-festival' }) }}">{{ app.content_tours.tourName('golden-eagle-festival') }}</a></p>
@@ -1780,7 +1809,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>8</p>
+                    <p>9</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
