http://www.travelallmongolia.com/testimonials.html page iin deed tald ni Tripadvisor iin logo banner maygiin ym tawiya, read our reviews at TripAdvisor

--- a/resources/views/Content/testimonials.html
+++ b/resources/views/Content/testimonials.html
@@ -1,7 +1,28 @@
 <style type="text/css">
     .frame_quote {background: #ffffff;}
     .frame_quote blockquote {color: black;}
+    .su-divider-style-default {
+        border-bottom-style: solid;
+    }
+    .su-divider {
+        clear: both;
+        border: none;
+        text-align: right;
+        line-height: 1;
+    }
 </style>
+
+<div align="center">
+    <h2>Our Trip Advisor Reviews</h2>
+    <div class="su-divider su-divider-style-default" style="margin:15px 0;border-width:1px;border-color:#dadada"></div>
+    <p>
+        <a href="https://www.tripadvisor.com/Hotel_Review-g940744-d12693608-Reviews-Gobi_Nomad_Lodge-Dalandzadgad_Omnogovi_Province.html"
+           target="blank"><img class="alignnone size-full wp-image-2966"
+                               src="//images/trip_advisor_2.jpg"
+                               alt="Read our trip advisor reviews" width="500" height="128"
+                               sizes="(max-width: 500px) 100vw, 500px"></a></p>
+</div>
+
 <div class="frame_quote"><blockquote>
     <p>
         <em>
