--- a/resources/views/Page/show.html.twig
+++ b/resources/views/Page/show.html.twig
@@ -28,9 +28,11 @@
                 <article class="blog-article">
 
                     <div class="blog-content">
+                        {% if page.hide_title is not defined or page.hide_title is empty %}
                         <div class="blog-content-title">
                             <h1>{{ page.title }}</h1>
                         </div>
+                        {% endif %}
                         <div class="blog-content-entry" style="font-size: 16px; text-align: justify; line-height: 1.7; color: #070707">
                             {% if page.content is defined and page.content is not empty %}
                                 {% include('Content/'~page.content) %}
