http://www.travelallmongolia.com/testimonials.html page iin deed tald ni Tripadvisor iin logo banner maygiin ym tawiya, read our reviews at TripAdvisor

--- a/resources/views/Content/testimonials.html
+++ b/resources/views/Content/testimonials.html
@@ -18,10 +18,12 @@
     <p>
         <a href="https://www.tripadvisor.com/Hotel_Review-g940744-d12693608-Reviews-Gobi_Nomad_Lodge-Dalandzadgad_Omnogovi_Province.html"
            target="blank"><img class="alignnone size-full wp-image-2966"
-                               src="//images/trip_advisor_2.jpg"
+                               src="/images/trip_advisor_2.jpg"
                                alt="Read our trip advisor reviews" width="500" height="128"
                                sizes="(max-width: 500px) 100vw, 500px"></a></p>
 </div>
+
+<h2>Testimonials</h2>
 
 <div class="frame_quote"><blockquote>
     <p>
