http://www.travelallmongolia.com/contact/form ene page ni request catalog gesnii dood tald ni, facebook pagenii hajuu tald ni, gol ni neeree ene linktei connect hiihiin shuu, https://www.tripadvisor.com/Attraction_Review-g293956-d14109676-Reviews-Travel_All_Mongolia-Ulaanbaatar.html

--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -122,6 +122,9 @@
                 <div style="background-color: #ffffff; overflow: hidden;">
                     {#<div style="width: 470px; margin-right: 10px; float: left"><a href="/tour/a-classic-journey-of-mongolia-with-naadam-festival.html"><img src="/images/banner_naadam.jpg"/></a></div>#}
                     <div class="fb-like-box" data-href="https://www.facebook.com/travelallmongolia" data-width="500" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="true"></div>
+
+                    {% block fb_like_right %}{% endblock %}
+
                 </div>
             </div>
             {#<iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Ftravelallmongolia&width=250&layout=standard&action=like&show_faces=true&share=true&height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:250px; height:80px;" allowTransparency="true"></iframe>#}
