--- a/resources/views/Page/contact.html.twig
+++ b/resources/views/Page/contact.html.twig
@@ -105,3 +105,13 @@
 </div><!--end conatiner-->
 
 {% endblock %}
+
+{% block fb_like_right %}
+<div>
+    <a href="https://www.tripadvisor.com/Attraction_Review-g293956-d14109676-Reviews-Travel_All_Mongolia-Ulaanbaatar.html"
+       target="blank"><img class="alignnone size-full wp-image-2966"
+                           src="/images/trip_advisor_2.jpg"
+                           alt="Read our trip advisor reviews" width="450"
+                           sizes="(max-width: 450px) 100vw, 450px"></a>
+</div>
+{% endblock %}
