http://www.travelallmongolia.com/contact/form ene page ni request catalog gesnii dood tald ni, facebook pagenii hajuu tald ni, gol ni neeree ene linktei connect hiihiin shuu, https://www.tripadvisor.com/Attraction_Review-g293956-d14109676-Reviews-Travel_All_Mongolia-Ulaanbaatar.html

--- a/resources/views/Page/contact.html.twig
+++ b/resources/views/Page/contact.html.twig
@@ -107,7 +107,7 @@
 {% endblock %}
 
 {% block fb_like_right %}
-<div>
+<div style="float: right">
     <a href="https://www.tripadvisor.com/Attraction_Review-g293956-d14109676-Reviews-Travel_All_Mongolia-Ulaanbaatar.html"
        target="blank"><img class="alignnone size-full wp-image-2966"
                            src="/images/trip_advisor_2.jpg"
