--- a/resources/views/Page/contact.html.twig
+++ b/resources/views/Page/contact.html.twig
@@ -107,11 +107,11 @@
 {% endblock %}
 
 {% block fb_like_right %}
-<div style="float: right; padding-left: 15px; padding-right: 15px;">
+<div style="float: right; padding-left: 15px;">
     <a href="https://www.tripadvisor.com/Attraction_Review-g293956-d14109676-Reviews-Travel_All_Mongolia-Ulaanbaatar.html"
        target="blank"><img class="alignnone size-full wp-image-2966"
                            src="/images/trip_advisor_2.jpg"
-                           alt="Read our trip advisor reviews" width="450"
-                           sizes="(max-width: 420px) 100vw, 420px"></a>
+                           alt="Read our trip advisor reviews" width="435"
+                           sizes="(max-width: 435px) 100vw, 435px"></a>
 </div>
 {% endblock %}
