--- a/resources/views/Tour/jewels-of-mongolia.html.twig
+++ b/resources/views/Tour/jewels-of-mongolia.html.twig
@@ -231,7 +231,7 @@
                                 <a class="btn btn_cyan" href="{{ path('request_quote',{'slug':slug}) }}"><span>REQUEST A QUOTE</span></a>
                             {% endif %}
                             <a class="btn btn_green" href="{{ path('catalog') }}"><span>REQUEST A CATALOG</span></a>
-                            <a class="btn btn_violet" style="margin-top: 5px;" href="{{ path('request_airfare_quote') }}"><span>REQUEST AIRFARE QUOTE</span></a>
+                            {#<a class="btn btn_violet" style="margin-top: 5px;" href="{{ path('request_airfare_quote') }}"><span>REQUEST AIRFARE QUOTE</span></a>#}
                             <a class="btn btn_turquoise" style="margin-top: 5px;" href="{{ path('request_a_callback') }}"><span>REQUEST A CALLBACK</span></a>
 
                             <h2 style="color: #B28E1B; margin-top: 20px; ">DETAILED TOUR ITINERARY</h2>
@@ -328,7 +328,7 @@
                                 <a class="btn btn_cyan" href="{{ path('request_quote',{'slug':slug}) }}"><span>REQUEST A QUOTE</span></a>
                             {% endif %}
                             <a class="btn btn_green" href="{{ path('catalog') }}"><span>REQUEST A CATALOG</span></a>
-                            <a class="btn btn_violet" style="margin-top: 5px;" href="{{ path('request_airfare_quote') }}"><span>REQUEST AIRFARE QUOTE</span></a>
+                            {#<a class="btn btn_violet" style="margin-top: 5px;" href="{{ path('request_airfare_quote') }}"><span>REQUEST AIRFARE QUOTE</span></a>#}
                             <a class="btn btn_turquoise" style="margin-top: 5px;" href="{{ path('request_a_callback') }}"><span>REQUEST A CALLBACK</span></a>
                             <script type="text/javascript">var addthis_config = {'services' : 'facebook,twitter,email,more', "data_track_addressbar":true};</script>
                             <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52b596d25b76435f"></script>
