aylal bur deer, request airfare quote gedeg button iig arilgaad orond ni trip advisroiin logo- tawiya

--- a/resources/views/Tour/western-southern-and-northern-mongolia-expedition.html.twig
+++ b/resources/views/Tour/western-southern-and-northern-mongolia-expedition.html.twig
@@ -235,6 +235,11 @@
                             <a class="btn btn_green" href="{{ path('catalog') }}"><span>REQUEST A CATALOG</span></a>
                             {#<a class="btn btn_violet" style="margin-top: 5px;" href="{{ path('request_airfare_quote') }}"><span>REQUEST AIRFARE QUOTE</span></a>#}
                             <a class="btn btn_turquoise" style="margin-top: 5px;" href="{{ path('request_a_callback') }}"><span>REQUEST A CALLBACK</span></a>
+                            <a href="https://www.tripadvisor.com/Attraction_Review-g293956-d14109676-Reviews-Travel_All_Mongolia-Ulaanbaatar.html"
+                               target="blank"><img class="alignnone size-full wp-image-2966"
+                                                   src="/images/trip_advisor_2.jpg"
+                                                   alt="Read our trip advisor reviews" height="32"
+                                                   sizes="(max-height: 32px) 100vw, 32px"></a>
 
                             <h2 style="color: #B28E1B; margin-top: 20px; ">DETAILED TOUR ITINERARY</h2>
 
