aylal bur deer, request airfare quote gedeg button iig arilgaad orond ni trip advisroiin logo- tawiya

--- a/resources/views/Tour/western-southern-and-northern-mongolia-expedition.html.twig
+++ b/resources/views/Tour/western-southern-and-northern-mongolia-expedition.html.twig
@@ -238,8 +238,7 @@
                             <a href="https://www.tripadvisor.com/Attraction_Review-g293956-d14109676-Reviews-Travel_All_Mongolia-Ulaanbaatar.html"
                                target="blank"><img class="alignnone size-full wp-image-2966"
                                                    src="/images/trip_advisor_2.jpg"
-                                                   alt="Read our trip advisor reviews" height="32"
-                                                   sizes="(max-height: 32px) 100vw, 32px"></a>
+                                                   alt="Read our trip advisor reviews" style="height: 35px !important; margin-top: 10px;"></a>
 
                             <h2 style="color: #B28E1B; margin-top: 20px; ">DETAILED TOUR ITINERARY</h2>
 
