--- a/resources/views/Tour/karakorum_khuvsgul.html.twig
+++ b/resources/views/Tour/karakorum_khuvsgul.html.twig
@@ -211,6 +211,7 @@
                             {% endif %}
                             {#<a class="btn btn_violet" style="margin-top: 5px;" href="{{ path('request_airfare_quote') }}"><span>REQUEST AIRFARE QUOTE</span></a>#}
                             <a class="btn btn_turquoise" style="margin-top: 5px;" href="{{ path('request_a_callback') }}"><span>REQUEST A CALLBACK</span></a>
+                            {{ include('Tour/_trip_advisor_button.html.twig') }}
 
                             <h2 style="color: #B28E1B; margin-top: 20px; ">DETAILED TOUR ITINERARY</h2>
 
@@ -300,6 +301,7 @@
                             {% endif %}
                             {#<a class="btn btn_violet" style="margin-top: 5px;" href="{{ path('request_airfare_quote') }}"><span>REQUEST AIRFARE QUOTE</span></a>#}
                             <a class="btn btn_turquoise" style="margin-top: 5px;" href="{{ path('request_a_callback') }}"><span>REQUEST A CALLBACK</span></a>
+                            {{ include('Tour/_trip_advisor_button.html.twig') }}
                             <script type="text/javascript">var addthis_config = {'services' : 'facebook,twitter,email,more', "data_track_addressbar":true};</script>
                             <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52b596d25b76435f"></script>
 
